<package>
  <name>actionlib_msgs</name>
  <version>1.9.6</version>
  <description>
     actionlib_msgs defines the common messages to interact with an
     action server and an action client.  For full documentation of
     the actionlib API see
     the <a href="http://www.ros.org/wiki/actionlib">actionlib</a>
     package.
  </description>
  <maintainer email="tfoote@willowgarage.com">Tully Foote</maintainer>
  <license>BSD</license>

  <url>http://ros.org/wiki/actionlib_msgs</url>
  <author>Vijay Pradeep</author>

  <build_depend>catkin</build_depend>
  <build_depend>genmsg</build_depend>
  <build_depend>langs-dev</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>langs</run_depend>
  <run_depend>std_msgs</run_depend>
</package>
