<package>
  <name>common_msgs</name>
  <version>1.9.2</version>
  <description brief="common messages">
    common_msgs contains messages that are widely used by other ROS packages.
    These includes messages for
    actions (<a href="http://ros.org/wiki/actionlib_msgs">actionlib_msgs</a>),
    diagnostics (<a href="http://ros.org/wiki/diagnostic_msgs">diagnostic_msgs</a>),
    geometric primitives (<a href="http://ros.org/wiki/geometry_msgs">geometry_msgs</a>),
    robot navigation (<a href="http://ros.org/wiki/nav_msgs">nav_msgs</a>),
    and common sensors (<a href="http://ros.org/wiki/sensor_msgs">sensor_msgs</a>), such as laser range finders, cameras, point clouds.
  </description>
  <maintainer email="tfoote@willowgarage.com">Tully Foote</maintainer>
  <license>BSD</license>

  <url>http://www.ros.org/wiki/common_msgs</url>
    
  <author>ROS Community</author>

  <build_depend>boost</build_depend>
  <build_depend>catkin</build_depend>
  <build_depend>genmsg</build_depend>
  <build_depend>langs-dev</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>boost</run_depend>
  <run_depend>langs</run_depend>
  <run_depend>std_msgs</run_depend>
		
</package>
