<package>
  <name>diagnostic_msgs</name>
  <version>1.9.4</version>
  <description>
    This package holds the diagnostic messages which provide the
    standardized interface for the diagnostic and runtime monitoring
    systems in ROS. These messages are currently used by
    the <a href="http://ros.org/wiki/diagnostics">diagnostics</a>
    Stack, which provides libraries for simple ways to set and access
    the messages, as well as automated ways to process the diagnostic
    data.

    These messages are used for long term logging and will not be
    changed unless there is a very important reason.
  </description>
  <maintainer email="tfoote@willowgarage.com">Tully Foote</maintainer>
  <license>BSD</license>

  <url>http://ros.org/wiki/diagnostic_msgs</url>
  <author email="tfoote@willowgarage.com">Tully Foote</author>

  <build_depend>catkin</build_depend>
  <build_depend>genmsg</build_depend>
  <build_depend>langs-dev</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>langs</run_depend>
  <run_depend>std_msgs</run_depend>
</package>
