<package>
  <name>geometry_msgs</name>
  <version>1.9.2</version>
  <description brief="Messages for geometric primatives">
    geometry_msgs provides messages for common geometric primatives
    such as points, vectors, and poses. These primatives are designed
    to provide a common data type and facilitate interoperability
    throughout the system.
  </description>
  <maintainer email="tfoote@willowgarage.com">Tully Foote</maintainer>
  <license>BSD</license>

  <url>http://ros.org/wiki/geometry_msgs</url>
  <author>Tully Foote</author>
  
  <build_depend>catkin</build_depend>
  <build_depend>genmsg</build_depend>
  <build_depend>std_msgs</build_depend>
</package>
