<package>
  <name>geometry_msgs</name>
  <version>1.9.8</version>
  <description>
    geometry_msgs provides messages for common geometric primitives
    such as points, vectors, and poses. These primitives are designed
    to provide a common data type and facilitate interoperability
    throughout the system.
  </description>
  <maintainer email="tfoote@willowgarage.com">Tully Foote</maintainer>
  <license>BSD</license>

  <url>http://ros.org/wiki/geometry_msgs</url>
  <author>Tully Foote</author>
  
  <build_depend>catkin</build_depend>
  <build_depend>genmsg</build_depend>
  <build_depend>langs-dev</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>langs</run_depend>
  <run_depend>std_msgs</run_depend>
</package>
