<package>
  <name>nav_msgs</name>
  <version>1.9.7</version>
  <description>
    nav_msgs defines the common messages used to interact with the
    <a href="http://ros.org/wiki/navigation">navigation</a> stack.
  </description>
  <maintainer email="tfoote@willowgarage.com">Tully Foote</maintainer>
  <license>BSD</license>

  <url>http://ros.org/wiki/nav_msgs</url>
  <author>Tully Foote</author>

  <build_depend>catkin</build_depend>
  <build_depend>genmsg</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>langs-dev</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>geometry_msgs</run_depend>
  <run_depend>langs</run_depend>
  <run_depend>std_msgs</run_depend>
</package>
