<package>
  <name>sensor_msgs</name>
  <version>1.9.2</version>
  <description>
    This package defines messages for commonly used sensors, including
    cameras and scanning laser rangefinders.
  </description>
  <maintainer email="tfoote@willowgarage.com">Tully Foote</maintainer>
  <license>BSD</license>

  <url>http://ros.org/wiki/sensor_msgs</url>
  <author>Ros Community</author>

  <build_depend>catkin</build_depend>
  <build_depend>genmsg</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
</package>
