<package>
  <name>shape_msgs</name>
  <version>1.9.2</name>
  <description>
    shape_msgs
  </description>
  <maintainer email="tfoote@willowgarage.com">Tully Foote</maintainer>
  <license>BSD</license>

  <url>http://ros.org/wiki/shape_msgs</url>
  <author>Ioan Sucan</author>

  <build_depend>catkin</build_depend>
</package>
