<package>
  <name>shape_msgs</name>
  <version>1.9.2</version>
  <description>
    shape_msgs
  </description>
  <maintainer email="tfoote@willowgarage.com">Tully Foote</maintainer>
  <license>BSD</license>

  <url>http://ros.org/wiki/shape_msgs</url>
  <author>Ioan Sucan</author>

  <build_depend>catkin</build_depend>
  <build_depend>genmsg</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
</package>
