<package>
  <name>stereo_msgs</name>
  <version>1.9.9</version>
  <description>
    stereo_msgs contains messages specific to stereo processing, such as disparity images.
  </description>
  <maintainer email="tfoote@willowgarage.com">Tully Foote</maintainer>
  <license>BSD</license>

  <url>http://ros.org/wiki/stereo_msgs</url>
  <author>Patrick Mihelich</author>
  <author>Kurt Konolige</author>

  <build_depend>catkin</build_depend>
  <build_depend>genmsg</build_depend>
  <build_depend>langs-dev</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>langs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
</package>
