<package>
  <name>trajectory_msgs</name>
  <version>1.9.6</version>
  <description>
    trajectory_msgs
  </description>
  <maintainer email="ros-release@code.ros.org">ROS Community</maintainer>
  <license>BSD</license>

  <url>http://ros.org/wiki/trajectory_msgs</url>
  <author>Stuart Glaser</author>

  <build_depend>catkin</build_depend>
  <build_depend>genmsg</build_depend>
  <build_depend>langs-dev</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>langs</run_depend>
  <run_depend>std_msgs</run_depend>
</package>
