<package>
  <name>trajectory_msgs</name>
  <version>1.9.17</version>
  <description>
    trajectory_msgs
  </description>
  <maintainer email="tfoote@osrfoundation.org">Tully Foote</maintainer>
  <license>BSD</license>

  <url>http://ros.org/wiki/trajectory_msgs</url>
  <author>Stuart Glaser</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
</package>
