<package>
  <name>visualization_msgs</name>
  <version>1.9.2</name>
  <description>
    <p>
    visualization_msgs is a set of messages used by higher level packages, such as <a href="/wiki/rviz">rviz</a>, that deal in visualization-specific data.
    </p>
    <p>
    The main messages in visualization_msgs is <tt>visualization_msgs/Marker</tt>.  The marker message is used to send visualization "markers" such as boxes, spheres, arrows, lines, etc. to a visualization environment such as <a href="http:///www.ros.org/wiki/rviz">rviz</a>.  See the rviz tutorial <a href="http://www.ros.org/wiki/rviz/Tutorials">rviz tutorials</a> for more information.
    </p>

  </description>
  <maintainer email="tfoote@willowgarage.com">Tully Foote</maintainer>
  <license>BSD</license>

  <url>http://ros.org/wiki/shape_msgs</url>
  <author email="jfaust@willowgarage.com">Josh Faust</author>
  <author email="dgossow@willowgarage.com">Davis Gossow</author>

  <build_depend>catkin</build_depend>
</package>
